Fixed an issue with Firefox and Chromium Edge where image replacement was not displayed correctly in high contrast mode.

--- a/src/scss/pbChr/01_common.scss
+++ b/src/scss/pbChr/01_common.scss
@@ -105,7 +105,10 @@
     }
 
 /* //_{@modern */
-@media (-ms-high-contrast : white-on-black), (-ms-high-contrast : active) {
+/*  IE10~11, EdgeHTML
+--------------------------------------------------------------------------------------*/
+@media only screen and (-ms-high-contrast : white-on-black),
+       only screen and (-ms-high-contrast : active) {
     .pbList-noWebFont .pbList font:before {
         content  : "";
         position : absolute;
@@ -118,7 +121,7 @@
     }
 }
 
-@media (-ms-high-contrast : black-on-white) {
+@media only screen and (-ms-high-contrast : black-on-white) {
     [class^=pbChr]:before {
         content  : "";
         position : absolute;
@@ -138,37 +141,41 @@
     }
 }
 
+/*  Windows10 + Chromium Edge
+--------------------------------------------------------------------------------------*/
 /* Override for Windows10 + Chromium Edge
  *   https://twitter.com/pbrocky/status/1299745911170449411?s=20
  */
- @media (-ms-high-contrast : active) and (prefers-color-scheme : dark) {
+ @media only screen and (-ms-high-contrast : active) and (prefers-color-scheme : dark) {
     .pbList-noWebFont .pbList font:before {
         outline : solid 0;
     }
     .pbList-noWebFont .pbList font {
-        filter: invert(100%);
+        filter: invert(1);
     }
     .pbList-noWebFont .pbList font:after {
-        filter: invert(0%);
+        filter: invert(0);
     }
 }
-/* //_}@modern */
 
-/* //_{@modern */
+/*  Firefox, Goanna
+--------------------------------------------------------------------------------------*/
     .jsHcm.pbList-noWebFont    .pbList font,
     .jsHcmWob.pbList-noWebFont .pbList font,
     .jsHcmBow [class^=pbChr]:after {
-        filter : invert(100%);
+        filter : invert(1);
     }
     .jsHcmBow.pbList-noWebFont .pbList font:after {
         content : url(pbLCD/x3.gif);
     }
     .jsHcmBow .pbLCD [class^=pbChr]:after,
     .jsHcmBow.pbList-noWebFont .pbList font:after {
-        filter : invert(0%);
+        filter : invert(0);
     }
 /* //_}@modern */
 
+/*  IE8~9
+--------------------------------------------------------------------------------------*/
 /* //_{@ie8,@ie9 */
     .jsHcmBow [class^=pbChr]:before,
     .jsHcm.pbList-noWebFont .pbList font:before,
