--- a/src/scss/pbList/04_prettify.scss
+++ b/src/scss/pbList/04_prettify.scss
@@ -97,7 +97,7 @@
                 background-color : white;
             }
             font:after {
-                filter           : invert(100%);
+                filter           : invert(1);
             }
             .pbList-area {
                 background-color : #C487A0;
